Fix test failures due to JDKs becoming more stringent, both for the targeted JDK 17 and JDK 21 used to run the test suite locally.